--- a/package.json
+++ b/package.json
@@ -22,23 +22,28 @@
     "url": "https://github.com/PykyE/E-commerce/issues"
   },
   "homepage": "https://github.com/PykyE/E-commerce#readme",
-  "dependencies": {
-    "react-router-dom": "^6.2.1"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@babel/core": "^7.16.7",
     "@babel/node": "^7.16.7",
     "@babel/preset-env": "^7.16.7",
     "@babel/preset-react": "^7.16.7",
+    "@reduxjs/toolkit": "^1.7.1",
     "babel-loader": "^8.2.3",
+    "bootstrap": "^4.6.1",
     "clean-webpack-plugin": "^4.0.0",
     "compression-webpack-plugin": "^9.2.0",
     "css-loader": "^6.5.1",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.4.5",
+    "node-sass": "^7.0.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.0",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
+    "react-redux": "^7.2.6",
+    "react-router-dom": "^6.2.1",
+    "redux": "^4.1.2",
     "sass": "^1.46.0",
     "sass-loader": "^12.4.0",
     "style-loader": "^3.3.1",
